samples/_failures_safe/1761297363_29428c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0adee9ec.c: In function ‘main’:
./samples/SAFE/__tmp_0adee9ec.c:166:12: error: missing terminating " character
  166 |     printf("%-12s %-15
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_0adee9ec.c:166:5: error: expected expression at end of input
  166 |     printf("%-12s %-15
      |     ^~~~~~
./samples/SAFE/__tmp_0adee9ec.c:166:5: error: expected declaration or statement at end of input
